--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -10,11 +10,7 @@
       "es2017",
       "dom"
     ],
-    "typeRoots": [
-      "node_modules/@types"
-    ]
-  },
-  "include": [
-    "src/**/*"
-  ]
+    "strictNullChecks": true,
+    "skipLibCheck": true
+  }
 }
