--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
   "dependencies": {
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "rxjs": "^5.0.2"
+    "rxjs": "^5.0.2",
+    "setimmediate": "^1.0.5"
   },
   "scripts": {
     "start": "node scripts/start.js",
