--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "asap": "^2.0.5",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "rxjs": "^5.0.2",
