--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "@types/bluebird": "^3.0.37",
     "@types/node": "^6.0.57",
     "@types/react": "^0.14.57",
     "@types/react-dom": "^0.14.20",
@@ -57,6 +58,7 @@
   },
   "dependencies": {
     "asap": "^2.0.5",
+    "bluebird": "^3.4.7",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "rxjs": "^5.0.2",
