--- a/package.json
+++ b/package.json
@@ -57,12 +57,11 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
-    "asap": "^2.0.5",
-    "bluebird": "^3.4.7",
+    "ovrmrw-reactive-store": "^0.0.4",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "rxjs": "^5.0.2",
-    "setimmediate": "^1.0.5"
+    "tslib": "^1.5.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
