--- a/package.json
+++ b/package.json
@@ -57,9 +57,14 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "core-js": "^2.4.1",
+    "inversify": "^3.0.0",
+    "inversify-binding-decorators": "^3.0.0",
+    "inversify-inject-decorators": "^3.0.1",
     "ovrmrw-reactive-store": "^0.0.21",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "reflect-metadata": "^0.1.9",
     "rxjs": "^5.0.2",
     "tslib": "^1.5.0"
   },
